assets/css/blueprint.css
/* ... */
.navbar .navbar-item.is-search-bar {
    border-top: 1px solid #d6d6d6;
    border-bottom: 1px solid #d6d6d6;
    margin: 0;
    padding: 0.5rem 1.5rem;
}
.navbar .navbar-item:hover a {
    color: #6b4370;
}
.navbar .navbar-item:hover a.sub-link {
    color: #484848;
}
@media screen and (min-width: 1280px) {
    .navbar .navbar-item:hover .selector {
        background-color: #6b4370;
    }
}

.navbar {
    padding: 0 1rem;
    border-bottom: 1px solid #f0f0f0;
}
.navbar-start {
    margin: 0 1rem;
}
@media screen and (max-width: 1023px) {
    .navbar-start {
        margin: 0 auto 1rem;
    }
}
@media screen and (min-width: 1024px) and (max-width: 1279px) {
    .navbar-start {
        margin: 0 auto 1rem;
    }
}
@media screen and (max-width: 1023px) {
    .navbar-start .navbar-item + .navbar-item {
        margin-top: 1.2rem;
    }
}
@media screen and (min-width: 1024px) and (max-width: 1279px) {
    .navbar-start .navbar-item + .navbar-item {
        margin-top: 1.2rem;
    }
}
@media screen and (max-width: 1023px) {
    .navbar-start .navbar-item a.active {
        border-bottom: 2px solid #0487bf;
    }
}
@media screen and (min-width: 1024px) and (max-width: 1279px) {
    .navbar-start .navbar-item a.active {
        border-bottom: 2px solid #0487bf;
    }
}
.navbar-item {
    font-size: 1rem;
    font-weight: bold;
    margin: 0 0.75rem;
    padding: 0;
}
.navbar-item a {
    color: #484848;
}
.navbar-item .selector {
    position: absolute;
    width: 100%;
    bottom: 0;
    height: 5px;
}
.navbar-item .selector.active {
    background-color: #0487bf;
}
.navbar-item img {
    max-height: none;
}
@media screen and (min-width: 1280px) {
    .navbar-item.active {
        border-bottom: 1px solid #0487bf;
    }
}
.navbar-item.is-search-bar {
    border-top: 1px solid #d6d6d6;
    border-bottom: 1px solid #d6d6d6;
    margin: 0;
    padding: 0.5rem 1.5rem;
}
@media screen and (max-width: 1023px) {
    .navbar {
        padding: 0;
    }
}
@media screen and (min-width: 1024px) and (max-width: 1279px) {
    .navbar {
        padding: 0;
    }
}

.navbar-item.is-mega {
    position: static;
}
.navbar-item.is-mega .navbar-item {
    padding-left: 0;
}
@media screen and (max-width: 768px) {
    .navbar-item.is-mega .navbar-item {
        margin-top: 0.5rem;
    }
}
.navbar-item.is-mega .is-mega-menu-title {
    margin-bottom: 0;
    padding: 0.375rem 1.5rem;
    color: #6b4370;
}

.display {
    font-family: "Lato", sans-serif;
    font-size: 5.25rem;
    letter-spacing: -1.5px;
    line-height: 5.25rem;
    word-wrap: normal;
}
@media screen and (max-width: 1023px) {
    .display {
        font-size: 4rem;
    }
}
@media screen and (max-width: 768px) {
    .display {
        font-size: 3.5rem;
    }
}

p,
li,
center {
    font-family: "Lato", sans-serif;
    font-size: 1.25rem;
    line-height: 2rem;
}

small {
    font-family: "Lato", sans-serif;
    font-size: 0.9375rem;
    letter-spacing: 0.2px;
}

b,
strong {
    font-family: inherit;
    font-weight: 600;
}

h1,
h1 center {
    font-family: "Lato", sans-serif;
    font-size: 3.375rem;
    line-height: 3.75rem;
    letter-spacing: -1.5px;
    word-wrap: normal;
}
@media screen and (max-width: 1023px) {
    h1,
    h1 center {
        font-size: 3rem;
    }
}
@media screen and (max-width: 768px) {
    h1,
    h1 center {
        font-size: 2.75rem;
    }
}

h2,
h2 center {
    font-family: "Lato", sans-serif;
    font-size: 2.75rem;
    line-height: 3.75rem;
}
@media screen and (max-width: 1023px) {
    h2,
    h2 center {
        font-size: 2rem;
    }
}

h3,
h3 center {
    font-family: "Lato", sans-serif;
    font-size: 2rem;
    line-height: 2.8125rem;
}
@media screen and (max-width: 1023px) {
    h3,
    h3 center {
        font-size: 1.75rem;
    }
}

h4,
h4 center {
    font-family: "Lato", sans-serif;
    font-size: 1.625rem;
    line-height: 1.875rem;
}
@media screen and (max-width: 1023px) {
    h4,
    h4 center {
        font-size: 1.5rem;
    }
}

h5,
h5 center {
    font-family: "Lato", sans-serif;
    font-size: 1.375rem;
    line-height: 1.875rem;
}
@media screen and (max-width: 1023px) {
    h5,
    h5 center {
        font-size: 1.375rem;
    }
}

h6,
h6 center {
    font-family: "Lato", sans-serif;
    font-size: 1rem;
    line-height: 1.25rem;
}
@media screen and (max-width: 1023px) {
    h6,
    h6 center {
        font-size: 1rem;
    }
}

.tab-content {
    margin-top: -25px;
    border: 1px solid #dbdbdb;
    background-color: white;
}

.bp-masthead {
    padding: 0 0 0 0;
    background-color: #f0f0f0;
    color: #484848;
}
.bp-masthead .masthead-layout {
    display: table;
    min-height: 1.75rem;
    color: #484848;
    font-size: 14px;
}

.bp-masthead .masthead-divider {
    width: 100%;
    border-bottom: solid 0px #CCCCCC;
}

.bp-masthead .masthead-divider.is-hidden {
    display:none;
}

@media screen and (max-width: 1023px) {
    .bp-masthead .masthead-layout {
        text-align: left;
        padding-left: 12px;
    }
}

.bp-masthead .is-text {
    display: table-cell;
    vertical-align: middle;
    padding-left: 0.25rem;
}

.bp-masthead .row.is-multiline.is-vcentered {
    margin-right: 0;
}

.bp-masthead .banner-text-layout {
    display: table;
}

.bp-masthead .sgds-icon-chevron-down,
.bp-masthead .sgds-icon-chevron-up,
.bp-masthead .sgds-icon-sg-crest {
    display: table-cell;
    vertical-align: middle;
}

.bp-masthead .sgds-icon-chevron-down,
.bp-masthead .sgds-icon-chevron-up {
    margin-left: 2px;
}

.bp-masthead .bp-masthead-button {
    display: table-cell;
    cursor: pointer;
    color: #2f60ce;
}

.bp-masthead .bp-masthead-button:hover {
    color: #23489B;
}

.bp-masthead .bp-masthead-button-text {
    text-decoration-line: underline;
}

.bp-masthead .banner-content-layout {
    flex: none;
    width: 100%;
    padding-top: 22px;
    padding-bottom: 44px;
}

.bp-masthead .banner-content-layout.is-hidden{
    display: none;
}
/* ... */

